--- a/app/src/main/res/layout/camera_widget.xml
+++ b/app/src/main/res/layout/camera_widget.xml
@@ -3,7 +3,9 @@
     android:id="@+id/widget_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/widget_button_background">
+    android:background="@drawable/widget_button_gray"
+    android:clickable="true"
+    android:focusable="true">
     
     <ImageView
         android:id="@+id/widget_icon"
